libs/extractor/tests/snapshots/all_tests__conditional_styles.snap
---
source: libs/extractor/tests/all_tests.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import {Box} from '@devup-ui/core'\nconst Component = () => {\n    const isActive = true;\n    return <Box bg={isActive ? \"red\" : undefined} color={isActive ? undefined : \"blue\"} />;\n}\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: false, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "red",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "color",
                value: "blue",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui-0.css\";\nconst Component = () => {\n\tconst isActive = true;\n\treturn <div className={`${isActive ? \"a-a\" : \"\"} ${isActive ? \"\" : \"a-b\"}`} />;\n};\n",
}
